--- a/Market Analysis.ipynb
+++ b/Market Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8e2bb819",
+   "id": "3c6d41b9",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3a56f3ce",
+   "id": "26cdec0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20bf9cc4",
+   "id": "480705dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "99617d6f",
+   "id": "29e082cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "08b4668e",
+   "id": "b62a51a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "41015b69",
+   "id": "c05062fb",
    "metadata": {},
    "outputs": [
     {
@@ -747,18 +747,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "1aa09372",
+   "execution_count": 175,
+   "id": "a09e99f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_summary.to_csv('temp.csv')"
+    "df_summary.to_csv('MarketSummary.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "317aa277",
+   "execution_count": 172,
+   "id": "d880a861",
    "metadata": {},
    "outputs": [
     {
@@ -848,120 +848,39 @@
        "      <td>06. Btwn 60-250B</td>\n",
        "      <td>06. Btwn 60-80pct</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833138</th>\n",
-       "      <td>2021-12-22</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>0.997170</td>\n",
-       "      <td>78917419008</td>\n",
-       "      <td>0.002146</td>\n",
-       "      <td>78.917419</td>\n",
-       "      <td>06. Btwn 60-250B</td>\n",
-       "      <td>09. GT 95pct</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833139</th>\n",
-       "      <td>2021-12-23</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>0.961333</td>\n",
-       "      <td>78917419008</td>\n",
-       "      <td>0.002146</td>\n",
-       "      <td>78.917419</td>\n",
-       "      <td>06. Btwn 60-250B</td>\n",
-       "      <td>09. GT 95pct</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833140</th>\n",
-       "      <td>2021-12-27</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>0.995877</td>\n",
-       "      <td>78917419008</td>\n",
-       "      <td>0.002146</td>\n",
-       "      <td>78.917419</td>\n",
-       "      <td>06. Btwn 60-250B</td>\n",
-       "      <td>09. GT 95pct</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833141</th>\n",
-       "      <td>2021-12-28</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>0.926765</td>\n",
-       "      <td>78917419008</td>\n",
-       "      <td>0.002146</td>\n",
-       "      <td>78.917419</td>\n",
-       "      <td>06. Btwn 60-250B</td>\n",
-       "      <td>08. Btwn 90-95pct</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>833142</th>\n",
-       "      <td>2021-12-29</td>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>0.982820</td>\n",
-       "      <td>78917419008</td>\n",
-       "      <td>0.002146</td>\n",
-       "      <td>78.917419</td>\n",
-       "      <td>06. Btwn 60-250B</td>\n",
-       "      <td>09. GT 95pct</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>833143 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Date Ticker  P_Percentile    MarketCap  MarketCap_Percentile  \\\n",
-       "0      2015-03-18    MMM      0.684169  86661996544              0.002356   \n",
-       "1      2015-03-19    MMM      0.620690  86661996544              0.002356   \n",
-       "2      2015-03-20    MMM      0.685737  86661996544              0.002356   \n",
-       "3      2015-03-23    MMM      0.635834  86661996544              0.002356   \n",
-       "4      2015-03-24    MMM      0.651667  86661996544              0.002356   \n",
-       "...           ...    ...           ...          ...                   ...   \n",
-       "833138 2021-12-22    ZTS      0.997170  78917419008              0.002146   \n",
-       "833139 2021-12-23    ZTS      0.961333  78917419008              0.002146   \n",
-       "833140 2021-12-27    ZTS      0.995877  78917419008              0.002146   \n",
-       "833141 2021-12-28    ZTS      0.926765  78917419008              0.002146   \n",
-       "833142 2021-12-29    ZTS      0.982820  78917419008              0.002146   \n",
+       "        Date Ticker  P_Percentile    MarketCap  MarketCap_Percentile  \\\n",
+       "0 2015-03-18    MMM      0.684169  86661996544              0.002356   \n",
+       "1 2015-03-19    MMM      0.620690  86661996544              0.002356   \n",
+       "2 2015-03-20    MMM      0.685737  86661996544              0.002356   \n",
+       "3 2015-03-23    MMM      0.635834  86661996544              0.002356   \n",
+       "4 2015-03-24    MMM      0.651667  86661996544              0.002356   \n",
        "\n",
-       "        MarketCap_Billions MarketCap_Billions_Bins  P_Percentile_Bins  \n",
-       "0                86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
-       "1                86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
-       "2                86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
-       "3                86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
-       "4                86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
-       "...                    ...                     ...                ...  \n",
-       "833138           78.917419        06. Btwn 60-250B       09. GT 95pct  \n",
-       "833139           78.917419        06. Btwn 60-250B       09. GT 95pct  \n",
-       "833140           78.917419        06. Btwn 60-250B       09. GT 95pct  \n",
-       "833141           78.917419        06. Btwn 60-250B  08. Btwn 90-95pct  \n",
-       "833142           78.917419        06. Btwn 60-250B       09. GT 95pct  \n",
-       "\n",
-       "[833143 rows x 8 columns]"
+       "   MarketCap_Billions MarketCap_Billions_Bins  P_Percentile_Bins  \n",
+       "0           86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
+       "1           86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
+       "2           86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
+       "3           86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  \n",
+       "4           86.661997        06. Btwn 60-250B  06. Btwn 60-80pct  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_summary"
+    "df_summary.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "3ef459cb",
+   "execution_count": null,
+   "id": "eeddb0cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -969,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f779a00e",
+   "id": "954dd695",
    "metadata": {},
    "outputs": [],
    "source": []
